Change deprecated class.newInstance() to class.getDeclaredConstructor().newInstance() which is better in java 9+